--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,7 +15,7 @@
   <meta name="description" content="MoeIX | Moe Internet Exchanges" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="MoeIX | Moe Internet Exchanges" />
-  <meta name="og:description" content="MoeIX 由 MoeQing Network 运营，是于 2020 年成立的非商业互联网交换点（IXP）。" />
+  <meta name="og:description" content="MoeIX, operated by MoeQing Network, is a non-commercial Internet exchange point established in 2020" />
 
   <link
     href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&amp;family=Fira+Mono&amp;family=Inter&amp;display=swap"
@@ -32,50 +32,51 @@
       <h1>MoeIX</h1>
       <description>Moe Internet Exchanges</description>
       <div>
-        - 一个非商业性的互联网交换点 <br>
-        - 由 MoeQing Network 运营
+        - A non-commercial Internet exchange point <br>
+        - Operated by MoeQing Network
       </div>
     </header>
 
     <div class="contents">
       <div class="group">
         <div class="content des">
-          <h2 class="zh-cn">介绍</h2>
+          <h2 class="us-en">Introduction</h2>
           <div>
             <p>
-              MoeIX 是于 2020 年成立的非商业互联网交换点（IXP），主要为小型 ISP 、私人网络提供流量交换服务。 MoeIX
-              仅用作于学习、实验，禁止用于商业服务，也没有任何 SLA 保障。
+              MoeIX is a non-commercial Internet Exchange Point (IXP) established in 2020. 
+              It provides traffic exchange services mainly for small ISPs, private networks. 
+              MoeIX is for learning and experimentation only and is not allowed to be used for commercial services and has no SLA.
             </p>
           </div>
         </div>
         <div class="content loc">
-          <h2 class="zh-cn">位置</h2>
+          <h2 class="us-en">Current Location</h2>
           <ul>
-            <li>中国 湖南 长沙 | Changsha, Hunan, China</li>
-            <li>中国 河南 郑州 | Zhengzhou, Henan, China</li>
-            <li>美国 华盛顿州 西雅图 | Seattle, Washington, USA<ul>
+            <li> Changsha, Hunan, China</li>
+            <li>Zhengzhou, Henan, China</li>
+            <li>Seattle, Washington, USA<ul>
                 <li><a href="https://ixpm-sea.moeqing.com/lg/rs1-lan1-ipv6">IPv6 RS1 Looking Glass</a></li>
                 <li><a id="sea-member">Members</a></li>
               </ul>
             </li>
-            <li>美国 得克萨斯州 达拉斯 | Dallas, Texas, USA</li>
+            <li>Dallas, Texas, USA</li>
           </ul>
         </div>
         <div class="content req">
-          <h2 class="zh-cn">要求</h2>
+          <h2 class="us-en">Requirements</h2>
           <ul>
-            <li>具有有效的 Public ASN</li>
-            <li>具有至少一段 /48 IPv6 地址</li>
-            <li>具有最新的 PeeringDB 信息</li>
-            <li>具有最新的 RIR Whois 信息</li>
-            <li>仅向 IX LAN 宣告的目的主机发送流量</li>
-            <li>禁止发送任何 multicast 数据包（ ARP / IPv6 ND 除外 ）</li>
-            <li>禁止用于商业服务、禁止滥用</li>
-            <li>至少配置过两个以上 公网 / DN42 节点，并提供跨节点的 ip transit; 或与之相同的经验。</li>
+            <li>Has a valid Public ASN</li>
+            <li>Has at least /48 IPv6 address</li>
+            <li>Have up-to-date PeeringDB information (preferably)</li>
+            <li>Have up-to-date RIR Whois information</li>
+            <li>Only send traffic to destinations advertised by BGP on the Peering LAN</li>
+            <li>Does not send any multicast (except ARP/IPv6 ND) packets</li>
+            <li>Prohibition of commercial service and abuse</li>
+            <li>At least two or more public network / DN42 nodes configured with cross-node ip transit, or equivalent experience.</li>
           </ul>
         </div>
         <div class="content tnk">
-          <h2 class="zh-cn">特别感谢</h2>
+          <h2 class="us-en">Special Thanks</h2>
           <ul>
             <li>AS138517 KSKB for Technical support</li>
           </ul>
@@ -83,8 +84,9 @@
         <div class="content lnk">
           <h2>Q&A</h2>
           <p>
-            Q: 我可以通过什么方式接入 MoeIX？<br>
-            A: 每个位置要求不同，详情请见 <a href="https://docs.moeix.top/">MoeIX文档</a>。
+            Q: How can I connect to MoeIX?<br>
+            A: Each location has different requirements, please see <a href="https://docs.moeix.top/">MoeIX Documentation(Only Chinese)</a> for details 。
+            
           </p>
         </div>
       </div>
