--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
         <div class="content loc">
           <h2 class="us-en">Current Location</h2>
           <ul>
-            <li> Changsha, Hunan, China</li>
-            <li>Zhengzhou, Henan, China</li>
+            <li>Encrypted</li>
             <li>Seattle, Washington, USA<ul>
                 <li><a href="https://ixpm-sea.moeqing.com/lg/rs1-lan1-ipv6">IPv6 RS1 Looking Glass</a></li>
                 <li><a id="sea-member">Members</a></li>
               </ul>
             </li>
-            <li>Dallas, Texas, USA</li>
           </ul>
         </div>
         <div class="content req">
@@ -85,7 +83,7 @@
           <h2>Q&A</h2>
           <p>
             Q: How can I connect to MoeIX?<br>
-            A: Each location has different requirements, please see <a href="https://docs.moeix.top/">MoeIX Documentation(Only Chinese)</a> for details 。
+            A: MoeIX SEA is temporarily closed to new member applications from now on, and will open again after future upgrades, with no planned completion time.
             
           </p>
         </div>
